# FlowLocal

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  implementation_plan.md  setup_dev.ps1
.github/workflows/: ci.yml  release-linux.yml  release-windows.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  index.html  main.tsx
apps/desktop/src-tauri/: Cargo.toml  dev.db  tauri.conf.json
apps/desktop/src-tauri/.sqlx/: query-01c7d0dfd4aac1cb0f317cd19ac897c3b0927d1b28cd801f01bdfb150d4b3f0a.json  query-132ec6ecbe3688dd95147536637f5fafc3e5133e234799bf5148fa8b62ba11d1.json  query-2b0cd279da3d90d70544a0e94d6071f8a1d5a3208bad225b46496a7139d13b95.json  query-2c3a45d97b11f5cb464e23fda09838e0eed990a1d0ee45839e0c06fb0978bd17.json  query-3c1f7a0f910810374b3046de3ab281863e4443fa579c7d02424b147412cad2e4.json  query-60b176b55c9ee7e8149437fe93b808c477685359539374cd62224b78e2d98a94.json  query-8d7bb5f7cc71dd3cd558dcb580deb276a79760b8371a548176316984dbbc8e2b.json  query-958327e7f5572771378d18ba5b352a83ba32b34f6c4ba2b8e411b9f5005549c9.json  query-b6ae2753907fededbf912c965a8f500bfa94b79fed175ecac2a06617ce6fa58c.json  query-e96ce6351a88727067a3fcb059512b08ec0a28a829277484e86a72cd20506438.json
apps/desktop/src-tauri/capabilities/: default.json  overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  services.rs
apps/desktop/src-tauri/src/audio/: capture.rs  mod.rs
apps/desktop/src-tauri/src/commands/: audio_commands.rs  dict_commands.rs  history_commands.rs  mod.rs  settings_commands.rs
apps/desktop/src-tauri/src/context/: app_map.rs  detector.rs  mod.rs
apps/desktop/src-tauri/src/db/: manager.rs  mod.rs
apps/desktop/src-tauri/src/db/migrations/: 001_initial.sql  002_dictionary.sql  003_history.sql  004_memory.sql  005_default_toggle_hotkey.sql
apps/desktop/src-tauri/src/hotkey/: manager.rs  mod.rs
apps/desktop/src-tauri/src/inject/: linux.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/ipc/: bridge.rs  mod.rs  protocol.rs
apps/desktop/src-tauri/src/settings/: mod.rs  store.rs
apps/desktop/src-tauri/src/tray/: menu.rs  mod.rs
apps/desktop/src/components/Layout/: Layout.tsx  Sidebar.tsx
apps/desktop/src/components/Overlay/: Overlay.tsx
apps/desktop/src/hooks/: useEvents.ts  useWindowLabel.ts
apps/desktop/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Dictionary.tsx  History.tsx  Settings.tsx
apps/desktop/src/stores/: historyStore.ts  recordingStore.ts  settingsStore.ts
apps/desktop/src/types/: index.ts
docker/: Dockerfile.services  docker-compose.yml
scripts/: build.ps1  build.sh  dev.ps1  dev.sh  install.ps1  install.sh  setup-ollama.ps1  setup-ollama.sh
services/: main.py
services/llm/: pyproject.toml
services/llm/flowlocal_llm/: __init__.py  cleaner.py  main.py  server.py
services/llm/flowlocal_llm/prompts/: cleanup.txt  command.txt
services/rag/: pyproject.toml
services/rag/data/chroma/: chroma.sqlite3
services/rag/flowlocal_rag/: __init__.py  embedder.py  main.py  server.py  store.py
services/shared/: pyproject.toml
services/shared/flowlocal_shared/: __init__.py  config.py  ipc.py  logging.py
services/tests/: test_ipc.py  test_llm.py
services/whisper/: pyproject.toml
services/whisper/flowlocal_whisper/: __init__.py  main.py  models.py  server.py  transcriber.py
