[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowlocal-rag"
version = "0.1.0"
description = "ChromaDB RAG service for FlowLocal"
requires-python = ">=3.11"
dependencies = [
    "flowlocal-shared",
    "chromadb>=0.5",
    "httpx>=0.27",
]

[project.scripts]
flowlocal-rag = "flowlocal_rag.main:main"

[tool.hatch.build.targets.wheel]
packages = ["flowlocal_rag"]
