[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowlocal-whisper"
version = "0.1.0"
description = "Whisper transcription service for FlowLocal"
requires-python = ">=3.11"
dependencies = [
    "flowlocal-shared",
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]

[project.scripts]
flowlocal-whisper = "flowlocal_whisper.main:main"

[tool.hatch.build.targets.wheel]
packages = ["flowlocal_whisper"]
