[package]
name = "flow-local"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "FlowLocal — local-first voice dictation powered by Whisper and Ollama"
authors = ["FlowLocal Contributors"]
license = "MIT"

[lib]
name = "flow_local_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "flow-local"
path = "src/main.rs"

# ──────────────────────────────────────────────────
# Build dependencies
# ──────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ──────────────────────────────────────────────────
# Runtime dependencies
# ──────────────────────────────────────────────────
[dependencies]
# Tauri framework
tauri            = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell           = "2"
tauri-plugin-notification    = "2"
tauri-plugin-autostart       = "2"
tauri-plugin-process         = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = [
    "full",
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
    "time",
    "process",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
    "uuid",
] }

# Audio capture
cpal = "0.15"
hound = "3"       # WAV encoding for Python IPC

# Utilities
uuid     = { version = "1", features = ["v4"] }
chrono   = { version = "0.4", features = ["serde"] }
base64   = "0.22"
byteorder = "1"
once_cell = "1"
parking_lot = "0.12"
dirs     = "5"

# Logging
log        = "0.4"
env_logger = "0.11"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# ──────────────────────────────────────────────────
# Windows-specific
# ──────────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_DataExchange",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }

# ──────────────────────────────────────────────────
# Linux-specific
# ──────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# ──────────────────────────────────────────────────
# Profiles
# ──────────────────────────────────────────────────
[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = 3
strip        = true

[profile.dev]
opt-level = 1

# ──────────────────────────────────────────────────
# Workspace (monorepo)
# ──────────────────────────────────────────────────
[workspace]
# Intentionally a single crate. Python services are separate.
